# aiplayer

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  cross-platform-player-design.md  debug-open-video-crash.md  pyproject.toml  requirements.txt  setup.sh  vcpkg.json
.dbg/: open-video-crash.env
.github/workflows/: release.yml  sandbox.yml
.trae/specs/refactor-cross-platform-architecture/: checklist.md  spec.md  tasks.md
apps/: BUILD_MATRIX.md
apps/android/: README.md  settings.gradle.kts
apps/android/app/: README.md  build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/desktop/: CMakeLists.txt  README.md
apps/desktop/diag/: otool_aiplayer.txt  otool_libmpv.txt  otool_translate_helper.txt
apps/desktop/resources/: resources.qrc
apps/desktop/src/widgets/: logwindow.cpp
apps/ios/: README.md
apps/ios/AIPlayerIOS/: README.md  project.yml
apps/ios/AIPlayerIOS/AIPlayerIOS.xcodeproj/: project.pbxproj
apps/ios/AIPlayerIOS/App/: AIPlayerIOSApp.swift  AppCoordinator.swift
cmake/: Dependencies.cmake
diag/: lldb_bt.txt  mobile_contracts_syntax_check.cpp  otool_aiplayer.txt  otool_libmpv.txt  otool_translate_helper.txt  repro_after_logging.txt  repro_run.txt  verify_run.txt
features/: android_develop_rule.md  core_develop_rule.md  ios_develope_rule.md  todo_1.md  todo_2.md
features/android/: android_todo_v-a-1.0.1.md  android_todo_v-a-1.0.2.md  android_todo_v-a-1.0.3.md  android_todo_v-a-1.0.4.md  android_todo_v-a-1.0.5.md  android_todo_v-a-1.0.6.md  todo_1.md
features/core/: README.md  android_issue_v-a-1.0.5.md  desktop_issue_v-d-1.0.1.md  desktop_issue_v-d-1.0.2.md  desktop_issue_v-d-1.0.3.md  desktop_issue_v-d-1.0.4.md  desktop_issue_v-d-1.0.5.md  ios_issue_v-i-1.0.1.md  ios_issue_v-i-1.0.2.md
features/desktop/: desktop_baseline_v-d-1.0.0.md  desktop_develop_rule.md  desktop_todo_v-d-1.0.1.md
features/ios/: ios_todo_v-i-1.0.1.md  ios_todo_v-i-1.0.2.md  ios_todo_v-i-1.0.3.md  ios_todo_v-i-1.0.4.md  todo_1.md
scripts/: bootstrap_deps.ps1  bootstrap_deps.sh  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.bat  build_windows.ps1  fix_mpv_bundle.sh
src/: helpdialog.cpp  helpdialog.h  localtranslationengine.cpp  logcenter.cpp  logcenter.h  logwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mpvwidget.cpp  mpvwidget.h  settingsdialog.cpp  settingsdialog.h  translationhelper.cpp
src/core/model/: modelmanager.cpp  modelmanager.h
src/core/path/: apppaths.cpp  apppaths.h  ipathprovider.h
src/core/player/: iplayercontroller.h
src/core/translation/: localtranslationengine.cpp  localtranslationengine.h  translationservice.cpp  translationservice.h  translationsettings.cpp
src/libs/asr/: README.md
src/libs/asr/include/: asrservice.h
src/libs/asr/src/: asrservice.cpp
src/libs/asr/tests/: README.md
src/libs/logging/: README.md
src/libs/logging/src/: logcenter.cpp
src/libs/logging/tests/: README.md
src/libs/media/: README.md
src/libs/media/include/: README.md
src/libs/media/src/: README.md
src/libs/media/tests/: README.md
src/libs/model/: README.md
src/libs/model/include/: modeldownloadservice.h
src/libs/model/src/: modeldownloadservice.cpp
src/libs/model/tests/: README.md
src/libs/subtitles/: README.md
src/libs/subtitles/include/: README.md
src/libs/subtitles/src/: README.md
src/libs/subtitles/tests/: README.md
src/libs/translation/: README.md
src/libs/translation/include/: README.md
src/libs/translation/src/: README.md
src/libs/translation/tests/: README.md
src/platform/android/core/: CoreStateBridge.kt
src/platform/android/player/: AndroidPlayerController.kt  AndroidPlayerSnapshot.kt  PreviewAndroidPlayerController.kt
src/platform/android/session/: AndroidMediaSource.kt  AndroidPlaybackProgress.kt  AndroidPlaybackSession.kt  AndroidPlaybackSessionCoordinator.kt  AndroidPlaybackSessionStore.kt  AndroidSubtitlePreferences.kt  AndroidSubtitleSession.kt  AndroidTranslationPreferences.kt  SharedPreferencesPlaybackSessionStore.kt
src/platform/desktop/: desktopasrconfiguration.cpp  desktopasrconfiguration.h  desktoplocaltranslationbackend.cpp  desktoplocaltranslationbackend.h  desktopmodelcoordinator.cpp  desktopmodelcoordinator.h  desktoppathprovider.cpp  desktoppathprovider.h  desktopplayercontroller.cpp  desktopplayercontroller.h  onlinetranslationbackend.cpp  onlinetranslationbackend.h
src/platform/ios/: CoreStateBridge.swift  IOSImportedResourceRepository.swift  IOSNavigationService.swift  IOSPlaybackWorkspaceService.swift  IOSSandboxPathService.swift
src/platform/mobile/: README.md  mobilecontracts.h  mobilelocaltranslationbackend.h  mobilepathprovider.h
src/shared/: README.md
src/shared/bridge/: README.md
src/shared/bridge/cpp/: bridgeentrypoints.h
src/shared/bridge/ffi/: README.md
src/shared/bridge/kotlin/: README.md  kotlinbridgeentrypoints.h
src/shared/bridge/swift/: README.md  swiftbridgeentrypoints.h
src/shared/contracts/app/: appcontracts.h
src/shared/contracts/model/: modelcontracts.h
src/shared/contracts/player/: playercontracts.h
src/shared/contracts/subtitle/: subtitlecontracts.h
src/shared/contracts/translation/: translationbackend.h
src/shared/facade/model/: modelfacade.h
src/shared/facade/player/: playerfacade.h
src/shared/facade/translation/: translationfacade.h
src/shared/models/app/: appevent.h
src/shared/models/media/: README.md
src/shared/models/state/: appstate.h  statevocabulary.h
src/shared/models/subtitle/: subtitlesegment.h
src/shared/models/translation/: translationsettings.h
src/ui/mobile/android/: README.md
src/ui/mobile/android/navigation/: AndroidNavigator.kt  AppRoute.kt  NavigationState.kt
src/ui/mobile/android/theme/: AIPlayerTheme.kt  AndroidThemeTokens.kt
src/ui/mobile/ios/: README.md
src/ui/mobile/ios/Models/: FileImportRequest.swift  ImportedResource.swift  LibraryResourceViewData.swift  PlaybackItemViewData.swift  SubtitleStyleViewData.swift  TranslationOptionViewData.swift
src/ui/mobile/ios/Preview/: PreviewData.swift
(+59 files in other folders)
